WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183335
[WinCairo] Fix build errors when ENABLE_NETSCAPE_PLUGIN_API is turned off
https://bugs.webkit.org/show_bug.cgi?id=183335
Summary
[WinCairo] Fix build errors when ENABLE_NETSCAPE_PLUGIN_API is turned off
Yousuke Kimoto
Reported
2018-03-05 09:41:46 PST
For WinCairo WebKitLegacy, many build errors occur when ENABLE_NETSCAPE_PLUGIN_API is turned. This ticket fixes the issue.
Attachments
Patch
(8.98 KB, patch)
2018-03-05 11:42 PST
,
Yousuke Kimoto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yousuke Kimoto
Comment 1
2018-03-05 11:42:33 PST
Created
attachment 335011
[details]
Patch
WebKit Commit Bot
Comment 2
2018-03-15 13:41:45 PDT
Comment on
attachment 335011
[details]
Patch Clearing flags on attachment: 335011 Committed
r229640
: <
https://trac.webkit.org/changeset/229640
>
WebKit Commit Bot
Comment 3
2018-03-15 13:41:46 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-03-15 13:42:17 PDT
<
rdar://problem/38514436
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug