[WinCairo] Fix build errors when ENABLE_NETSCAPE_PLUGIN_API is turned off https://bugs.webkit.org/show_bug.cgi?id=183335

Patch by Yousuke Kimoto <yousuke.kimoto@sony.com> on 2018-03-15
Reviewed by Alex Christensen.

* Plugins/PluginDatabaseWin.cpp:
* Plugins/PluginMessageThrottlerWin.cpp:
(WebCore::PluginMessageThrottlerWin::processQueuedMessage):
* Plugins/PluginPackageWin.cpp:
(WebCore::PluginPackage::load):
* Plugins/PluginView.h:
* Plugins/PluginViewWin.cpp:
* Plugins/npapi.cpp:
* WebCoreSupport/WebFrameLoaderClient.cpp:
(WebFrameLoaderClient::createPlugin):
(WebFrameLoaderClient::createJavaAppletWidget):
* WebView.cpp:
(WebView::WebViewWndProc):

Canonical link: https://commits.webkit.org/199315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229640 268f45cc-cd09-0410-ab3c-d52691b4dbfc