Source/WebKitLegacy/win/Plugins/PluginMessageThrottlerWin.cpp
@@ -103,10 +103,12 @@ void PluginMessageThrottlerWin::processQueuedMessage()
     if (message == m_back)
         m_back = 0;
 
+#if ENABLE(NETSCAPE_PLUGIN_API)
     // Protect the PluginView from destruction while calling its window proc.
     // <rdar://problem/6930280>
     RefPtr<PluginView> protect(m_pluginView);
     ::CallWindowProc(m_pluginView->pluginWndProc(), message->hWnd, message->msg, message->wParam, message->lParam);
+#endif
 
     freeMessage(message);
 }
